# pempo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
Bootstrap/: CMakeLists.txt  cmake_vars.h  cmake_vars_generated.h  main.cpp  main.h
Injector/: CMakeLists.txt  main.cpp  main.h
MonoBootstrap/: CMakeLists.txt  main.cpp  main.h
MonoLibrary/: MonoLibrary.sln
MonoLibrary/Pempo/: AssemblyEntryPointAttribute.cs  EntryPointAttribute.cs  Pempo.csproj  Program.cs
MonoLibrary/Pempo/Properties/: AssemblyInfo.cs
src/Bootstrap/: CMakeLists.txt  main.cpp  main.h
src/Injector/: CMakeLists.txt  main.cpp  main.h
src/MonoBootstrap/: CMakeLists.txt  main.cpp  main.h
src/MonoLibrary/Pempo/: Pempo.csproj  Program.cs
src/MonoLibrary/Pempo/Properties/: AssemblyInfo.cs
src/MonoTestLibrary/: MonoTestLibrary.sln
src/MonoTestLibrary/MonoTestLibrary/: MonoTestLibrary.csproj  Program.cs
src/MonoTestLibrary/MonoTestLibrary/Properties/: AssemblyInfo.cs
src/TestApplication/: CMakeLists.txt  main.cpp
src/TestLibrary/: CMakeLists.txt  main.cpp  main.h
