cmake_minimum_required(VERSION 3.2)

set(OUTPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set(EXT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ext)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})

set(CMAKE_OSX_ARCHITECTURES "i386;x86_64")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/Bootstrap)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/Injector)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/MonoBootstrap)
